# xgrammar-rs

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  LICENSE  Package.swift  README.md  build.rs  platforms.toml  rustfmt.toml  xgrammar-pins.toml
bindings/python/: pyproject.toml
crates/bindings/: Cargo.toml
crates/bindings-types/: Cargo.toml
crates/bindings-types/src/: lib.rs
crates/bindings/src/: lib.rs
crates/bindings/src/backends/: mod.rs  napi.rs  pyo3.rs  rust.rs  uniffi.rs  wasm.rs
crates/bindings/src/contexts/: alias_context.rs  class_context.rs  enumeration_context.rs  error_context.rs  implementation_context.rs  method_metadata.rs  mod.rs  structure_context.rs
crates/bindings/src/types/: class_flavor.rs  kind.rs  method_flavor.rs  mod.rs  structure_flavor.rs
crates/legacy/: Cargo.toml
crates/legacy/.cargo/: config.toml
crates/legacy/src/: config.rs  dlpack.rs  testing.rs  utils.rs
crates/legacy/src/compiler/: grammar_compiler.rs
crates/legacy/src/cxx_utils/: compile_flags.txt  grammar.hpp  matcher.hpp  testing.hpp  tokenizer_info.hpp
crates/legacy/src/grammar/: mod.rs
crates/legacy/src/matcher/: batch_grammar_matcher.rs  mod.rs
crates/legacy/tests/: test_function_calling_converter.rs  test_grammar_compiler.rs  test_grammar_matcher_basic.rs  test_grammar_matcher_ebnf.rs  test_grammar_matcher_json_schema.rs  test_grammar_matcher_macro.rs  test_grammar_matcher_regex.rs  test_grammar_matcher_structural_tag.rs  test_grammar_parser.rs  test_grammar_parser_macro.rs  test_grammar_union_concat.rs  test_json_schema_converter.rs  test_regex_converter.rs  test_serialization.rs  test_speculative_decoding.rs  test_token_bitmask_operations.rs  test_tokenizer_info.rs  test_utils.rs
crates/xgrammar/: Cargo.toml
crates/xgrammar-core/: Cargo.toml
crates/xgrammar-core/src/: config.rs  lib.rs  testing.rs
crates/xgrammar-core/src/compiler/: compiled_grammar.rs  grammar_compiler.rs
crates/xgrammar-core/src/converter/: ebnf_script_creator.rs  json_schema_converter.rs  mod.rs  range_regex.rs  regex_converter.rs  structural_tag_converter.rs  structural_tag_error.rs  structural_tag_format.rs  xml_tool_calling_converter.rs
crates/xgrammar-core/src/fsm/: compact_fsm.rs  compact_fsm_with_start_end.rs  compact_fsm_with_start_end_with_size.rs  fsm.rs  fsm_edge.rs  fsm_with_start_end.rs  mod.rs  regex_fsm_builder.rs  serialization.rs  trie_fsm_builder.rs
crates/xgrammar-core/src/functor/: byte_string_fuser.rs  dead_code_eliminator.rs  grammar_fsm_builder.rs  grammar_normalizer.rs  grammar_union_concat.rs  lookahead_assertion_analyzer.rs  mod.rs  mutator.rs  repetition_range_expander.rs  root_rule_renamer.rs  rule_inliner.rs  single_element_expr_eliminator.rs  structure_normalizer.rs
crates/xgrammar-core/src/grammar/: character_class_element.rs  grammar.rs  grammar_builder.rs  grammar_expr.rs  grammar_expr_type.rs  mod.rs  printer.rs  rule.rs  serialization.rs  tag_dispatch.rs  token_tag_dispatch.rs
crates/xgrammar-core/src/matcher/: batch_grammar_matcher.rs  grammar_matcher.rs  matcher_error.rs  mod.rs  token_bitmask.rs
crates/xgrammar-core/src/parser/: earley_parser.rs  ebnf_error.rs  ebnf_lexer.rs  ebnf_parser.rs  macro_ir.rs  mod.rs  parser_state.rs  repeat_detector.rs
crates/xgrammar-core/src/support/: compact_2d_array.rs  dynamic_bitset.rs  encoding.rs  hash.rs  int_set.rs  mod.rs  recursion_guard.rs
crates/xgrammar-core/src/tokenizer/: mod.rs  token_decoder.rs  tokenizer_info.rs
crates/xgrammar-py/: Cargo.toml  build.rs  pyproject.toml
crates/xgrammar-py/src/: batch_matcher.rs  bitmask_util.rs  compiler.rs  config.rs  error.rs  grammar.rs  grammar_functor.rs  kernels.rs  lib.rs  matcher.rs  testing.rs  tokenizer_info.rs  vocab_type.rs
crates/xgrammar/src/: lib.rs  testing.rs
crates/xgrammar/src/compiler/: grammar_compiler.rs  mod.rs
crates/xgrammar/src/converter/: indent_manager.rs  mod.rs  range_regex.rs  regex_error.rs  schema_error.rs  schema_parser.rs  schema_spec.rs  structural_tag_converter.rs  structural_tag_parser.rs  xml_tool_calling_converter.rs
crates/xgrammar/src/fsm/: compact_fsm_with_start_end.rs  fsm.rs  fsm_with_start_end.rs  fsm_with_start_end_with_size.rs  mod.rs  serialization.rs  trie_fsm_builder.rs
crates/xgrammar/src/functor/: allow_empty_rule_analyzer.rs  dead_code_eliminator.rs  grammar_fsm_builder.rs  grammar_normalizer.rs  grammar_optimizer.rs  grammar_union_concat.rs  lookahead_assertion_analyzer.rs  mod.rs  mutator.rs  repetition_normalizer.rs  repetition_range_expander.rs  rule_inliner.rs  structure_normalizer.rs
crates/xgrammar/src/grammar/: character_class_element.rs  grammar_expr.rs  mod.rs  rule.rs  serialization.rs  tag_dispatch.rs
crates/xgrammar/src/matcher/: batch_grammar_matcher.rs  grammar_matcher.rs  mod.rs  token_bitmask.rs
crates/xgrammar/src/parser/: earley_parser.rs  ebnf_lexer.rs  lexer_error.rs  macro_ir.rs  parse_error.rs  repeat_detector.rs  token.rs  token_type.rs
crates/xgrammar/src/support/: encoding.rs  hash.rs  recursion_guard.rs  union_find_set.rs
crates/xgrammar/src/tokenizer/: hf_metadata.rs  mod.rs  tokenizer_info.rs  vocab_type.rs
crates/xgrammar/tests/cpp/: main.rs  test_fsm.rs  test_fsm_builder.rs  test_parser.rs  test_repetition_range.rs  test_serialization.rs  test_thread_pool.rs  test_thread_safe_cache.rs
crates/xgrammar/tests/python/: encoding_dsv32.rs  encoding_dsv4.rs  main.rs  test_builtin_structural_tag.rs  test_builtin_structural_tag_alignment.rs  test_function_calling_converter.rs  test_grammar_compiler.rs  test_grammar_matcher_basic.rs  test_grammar_matcher_ebnf.rs  test_grammar_matcher_json.rs  test_grammar_matcher_json_schema.rs  test_grammar_matcher_macro.rs  test_grammar_matcher_regex.rs  test_grammar_matcher_structural_tag.rs  test_grammar_parser.rs  test_grammar_parser_macro.rs  test_grammar_union_concat.rs  test_json_schema_converter.rs  test_recursion_depth.rs  test_regex_converter.rs  test_serialization.rs  test_speculative_decoding.rs  test_structural_tag_converter.rs  test_token_bitmask_operations.rs  test_token_edge.rs  test_utils.rs  (+1 more)
(+74 files in other folders)
