[workspace]
resolver = "3"
members = ["crates/xgrammar-core", "crates/xgrammar"]
# `crates/legacy` is the retired cxx-backed crate, kept for differential testing
# and reference; it is built on demand, not as part of the workspace.
# `xgrammar/` is the upstream C++ submodule (used only by the legacy crate).
exclude = ["crates/legacy", "xgrammar", "external"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/trymirai/xgrammar-rs"
homepage = "https://github.com/trymirai/xgrammar-rs"
authors = ["Eugene Bokhan <eugenebokhan@gmail.com>"]

[workspace.dependencies]
xgrammar-core = { path = "crates/xgrammar-core", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ahash = "0.8"
smallvec = { version = "1", features = ["serde", "union"] }
rayon = "1"
dlpark = "0.7"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
# The one-type-per-file convention names a file after its type, which can match the
# containing feature module (e.g. `grammar/grammar.rs`). That is intentional.
module_inception = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Optimize dependencies even in dev builds — the parsing/automata tests are heavy.
[profile.dev.package."*"]
opt-level = 3
