[workspace]
resolver = "3"
members = [
    "crates/xgrammar-core",
    "crates/xgrammar",
    "crates/bindings",
    "crates/bindings-types",
    "crates/xgrammar-py",
]
# `crates/legacy` is the retired cxx-backed crate, kept for differential testing
# and reference; it is built on demand, not as part of the workspace.
# `xgrammar/` is the upstream C++ submodule (used only by the legacy crate).
exclude = ["crates/legacy", "xgrammar", "external"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/trymirai/xgrammar-rs"
homepage = "https://github.com/trymirai/xgrammar-rs"
authors = ["Eugene Bokhan <eugenebokhan@gmail.com>"]

[workspace.dependencies]
xgrammar-core = { path = "crates/xgrammar-core", version = "0.3.0" }
getrandom = { version = "0.3", features = ["wasm_js"] }
xgrammar = { path = "crates/xgrammar", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
ahash = "0.8"
smallvec = { version = "1", features = ["serde", "union"] }
rayon = "1"
dlpark = "0.7"

# Cross-language bindings (uzu `#[bindings::export]` approach).
bindings = { path = "crates/bindings", version = "0.3.0" }
bindings-types = { path = "crates/bindings-types", version = "0.3.0" }
# proc-macro deps for the `bindings` crate.
heck = "0.5.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
# Backend deps (activated only by the matching `bindings-*` feature).
pyo3 = { version = "0.28.3", features = [
    "extension-module",
    "abi3-py312",
    "experimental-async",
    "multiple-pymethods",
] }
pyo3-build-config = "0.28.3"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.22.1"
inventory = "0.3.24"
uniffi = { version = "0.31.1", features = ["tokio"] }
napi = { version = "3.8.3", features = ["napi10", "object_indexmap", "tokio_rt"] }
napi-derive = "3.5.2"
napi-build = "2.3.1"
wasm-bindgen = { version = "0.2.114", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.64"
tsify = { version = "0.5.6", features = ["js"] }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
# The one-type-per-file convention names a file after its type, which can match the
# containing feature module (e.g. `grammar/grammar.rs`). That is intentional.
module_inception = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Optimize dependencies even in dev builds — the parsing/automata tests are heavy.
[profile.dev.package."*"]
opt-level = 3

