[package]
name = "xgrammar-rs"
version = "0.2.2"
edition = "2024"
rust-version = "1.85.1"
build = "build.rs"
links = "xgrammar"
authors = ["Eugene Bokhan <eugenebokhan@gmail.com>"]
description = "Efficient, Flexible and Portable Structured Generation for Rust - Rust bindings for XGrammar"
license = "Apache-2.0"
repository = "https://github.com/trymirai/xgrammar-rs"
homepage = "https://github.com/trymirai/xgrammar-rs"
documentation = "https://docs.rs/xgrammar-rs"
readme = "README.md"
keywords = ["llm", "grammar", "structured-gen", "json-schema", "parser"]
categories = ["parsing", "text-processing"]

[lib]
name = "xgrammar"

[dependencies]
cxx = { version = "1", git = "https://github.com/trymirai/cxx.git", branch = "master", features = ["compile-builtins-at-bridge-stage"] }
tokenizers = { version = "0.22", features = ["fancy-regex"], default-features = false, optional = true }
serde_json = "1.0"

[build-dependencies]
cc = "1.2.65"
cmake = "0.1"
cxx-build = { version = "1", git = "https://github.com/trymirai/cxx.git", branch = "master" }
walkdir = "2.5"
which = "8"

[dev-dependencies]
hf-hub = { version = "0.5" }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.4"

[features]
default = []
tokenizers = ["dep:tokenizers"]
hf = ["tokenizers"] # `hf` only remains for compatibility, it is synonymous to `tokenizers`
