[package]
name = "xgrammar-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Pure-Rust core of XGrammar: grammar model, EBNF parser, FSM engine, compiler and matcher."
keywords = ["llm", "grammar", "structured-generation", "json-schema", "parser"]
categories = ["parsing", "text-processing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
