[package]
name = "xgrammar-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Cross-language bindings for the pure-Rust xgrammar core (uzu #[bindings::export] approach)."

[lib]
name = "xgrammar_rs"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
bindings = [
    "bindings-uniffi",
    "bindings-napi",
    "bindings-pyo3",
    "bindings-wasm",
]
bindings-uniffi = ["bindings-types/bindings-uniffi", "dep:uniffi"]
bindings-napi = [
    "bindings-types/bindings-napi",
    "dep:napi",
    "dep:napi-derive",
    "dep:napi-build",
]
bindings-pyo3 = [
    "bindings-types/bindings-pyo3",
    "dep:pyo3",
    "dep:pyo3-build-config",
    "dep:pyo3-async-runtimes",
    "dep:pyo3-stub-gen",
    "dep:inventory",
]
bindings-wasm = [
    "bindings-types/bindings-wasm",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:tsify",
]

[dependencies]
xgrammar.workspace = true
bindings.workspace = true
bindings-types.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uniffi = { workspace = true, optional = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }

[build-dependencies]
napi-build = { workspace = true, optional = true }
pyo3-build-config = { workspace = true, optional = true }

[lints]
workspace = true
