[package]
name = "xgrammar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Efficient, Flexible and Portable Structured Generation for Rust — pure-Rust XGrammar."
keywords = ["llm", "grammar", "structured-generation", "json-schema", "parser"]
categories = ["parsing", "text-processing"]
readme = "../../README.md"
# Integration tests mirror the upstream layout (tests/{cpp,python}/) and are aggregated
# per-directory via main.rs, so disable auto-discovery and declare them explicitly.
autotests = false

[features]
default = []
# HuggingFace tokenizer integration (pulls in the `tokenizers` crate).
tokenizers = ["dep:tokenizers"]
# Backwards-compatible alias for `tokenizers`.
hf = ["tokenizers"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
# Needed by ahash on wasm32-unknown-unknown (enables JS random source).
getrandom = { workspace = true }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"], optional = true }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[lints]
workspace = true

# Ported upstream suites, mirroring xgrammar/tests/{cpp,python}/ file-for-file.
[[test]]
name = "cpp"
path = "tests/cpp/main.rs"

[[test]]
name = "python"
path = "tests/python/main.rs"
